re PR c++/5310 (Weird warnings about using (int)NULL)

2007-11-23  Mark Mitchell  <mark@codesourcery.com>
	    Manuel Lopez-Ibanez  <manu@gcc.gnu.org>
	
	PR c++/5310
cp/
	* call.c (convert_like_real): Build a zero constant when __null is
	converted to an integer type.
testsuite/
	* g++.dg/warn/pr5310.C: New.
	* g++.dg/warn/pr33160.C: New

Co-Authored-By: Manuel López-Ibáñez <manu@gcc.gnu.org>

From-SVN: r130381